# agentic-factory

./: .coverage  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  risk-policy.json
.claude/: settings.json
.claude/hooks/: enforce-tenant-safety.sh  inject-env.sh  require-tests-pass.sh  run-linter.sh
.claude/rules/: anti-patterns.md  patterns.md
.github/actions/run-agent/: action.yml
.github/workflows/: agent-issue-reply.yml  agent-issue-trigger.yml  agent-remediation.yml  agent-review.yml  agent-triage.yml  agent-write.yml  pattern-extraction.yml  test.yml
apps/: __init__.py
apps/orchestrator/: agent_interaction.py  error_router.py  issue_creator.py  main.py  metrics.py  models.py  providers.py  runner_client.py
apps/orchestrator/jobs/: codebase_scan.py  pattern_extraction.py  weekly_summary.py
apps/orchestrator/routers/: callbacks.py  clickup.py
apps/runner/: Dockerfile  __init__.py  audit.py  benchmark.py  budget.py  circuit_breaker.py  github_tokens.py  litellm_proxy.py  main.py  middleware.py  models.py  sandbox.py  watchdog.py  workspace.py
apps/runner/engines/: __init__.py  aider.py  claude_code.py  codex.py  (+5 more)
data/: agent-outcomes.jsonl
docs/: engines.md  providers.md
docs/plans/: 2026-02-18-pipeline-stress-test-design.md  2026-02-18-self-improving-pipeline-design.md  2026-02-19-agent-runner-architecture-design.md
docs/research/: competitive-analysis.md  cost-analysis.md  design-philosophy.md
scripts/: extract_patterns.py  risk_policy_gate.py
tests/: conftest.py  conftest_e2e.py  test_agent_interaction.py  test_audit.py  test_benchmark.py  test_budget.py  test_callbacks_error_router.py  test_circuit_breaker.py  test_codex_adapter.py  test_e2e_engines.py  test_engine_adapters.py  test_error_router.py  test_gemini_adapter.py  test_github_tokens.py  test_issue_creator.py  test_jobs_codebase_scan.py  test_jobs_weekly_summary.py  test_litellm_proxy.py  test_main.py  test_metrics.py  test_models.py  test_pattern_extraction.py  test_pi_adapter.py  test_providers.py  test_risk_policy_gate.py  test_routers_callbacks.py  test_routers_clickup.py  test_runner_callbacks.py  test_runner_client.py  test_runner_engines.py  test_runner_error_router.py  test_runner_integration.py  test_runner_middleware.py  test_runner_models.py  test_runner_sandbox_integration.py  test_runner_service.py  test_runner_subprocess.py  test_runner_workspace.py  test_sandbox.py  test_watchdog.py
web/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/drizzle/: 0000_confused_bloodaxe.sql
web/src/: middleware.ts
(+138 files in other folders)
